# gnugk

./: .cvsignore  .gitignore  .lgtm.yml  ANSI.h  BroadcastListen.cxx  BroadcastListen.h  CMakeLists.txt  CountryCodeTables.cxx  CountryCodeTables.h  FindFIREBIRD.cmake  FindH323PLUS.cmake  FindMYSQL.cmake  FindODBC.cmake  FindPOSTGRESQL.cmake  FindSQLITE.cmake  GkAuthorize.cxx  GkAuthorize.h  GkClient.cxx  GkClient.h  GkProfile.cxx  GkProfile.h  GkQ931.h  GkStatus.cxx  GkStatus.h  H46023_license.txt  MakeCall.cxx  MakeCall.h  Makefile  Makefile.in  MulticastGRQ.cxx  MulticastGRQ.h  Neighbor.cxx  Neighbor.h  ProxyChannel.cxx  ProxyChannel.h  ProxyChannel.t.cxx  ProxyThread.cxx  ProxyThread.h  RasListener.cxx  RasListener.h  (+195 more)
.github/workflows/: build.yml  codeql-analysis.yml
.github/workflows/.github/workflows/: build.yml
addpasswd/: .cvsignore  Makefile  addpasswd.cbp  addpasswd.cxx
cmake/: FindODBC.cmake  FindPOSTGRESQL.cmake  FindPTLIB.cmake
contrib/WinInstaller/: readme.txt
contrib/WinInstaller/Functions/: Form1.frm  Form1.frx  Project1.vbp  base.bas  mnuWait.bas
contrib/WinInstaller/GNUGkService/: Install_GNUGK.bat  NTSVC.ocx  Readme.txt  UnInstall_GNUGK.bat
contrib/WinInstaller/GNUGkService/Source/: PacGnuGKNTS.vbp  frmWrapper.frm  frmWrapper.frx  mPSAPI.bas  modRegistry.bas  modShellOps.bas
contrib/WinInstaller/Install/: gatekeeper.ini  gnugk.iss
contrib/bmv2/: INSTALL  README  STRUCTURE  chooselog.html  choosepfx.html  gateways.php  help.php  home.php  index.html  lastweek.php  periodlog.php  periodpfx.php  sidebar.html  summary.php  summarytdy.php  summaryytd.php  termlog.php  thisweek.php  today.php  yesterday.php
contrib/bmv2/accounts/: help.php  home.php  sidebar.php
contrib/bmv2/calldetails/: help.php  home.php  sidebar.php  specific.php  specific2.php
contrib/bmv2/costs/: choose.html  costs.php  home.php  index.html  sidebar.php
contrib/bmv2/lib/: display-cdr.php  dropdown.php  table-ui.php
contrib/bmv2/local/: connect.php  header.php  heading.html  version.php
contrib/bmv2/local/sample/: connect.php  header.php  heading.html  top.php
contrib/bmv2/misc/: dst.php  grp.php  help.php  home.php  sel.php  sidebar.php
contrib/bmv2/qa/: help.php  index.html  sidebar.html  sidebar.html~  tdyasr.php  tdybad.php  tdylog.php  tdyq931.php  tdysummary.php  ytdasr.php  ytdbad.php  ytdcost.php  ytdlog.php  ytdq931.php  ytdsummary.php  ytdtraffic.php
contrib/bmv2/rates/: index.html  poprates.php  rates-car.html  rates-car.php  rates-dest.html  rates-dest.php  rates-pfx.html  rates-sel.html  sidebar.html
contrib/bmv2/tariffs/: help.php  home.php  rates-dest.php  rates-pfx.php  sidebar.php  tariff-grp.html  tariff-grp.php
contrib/bmv2/users/: help.php  home.php  index.html  originate.php  sidebar.php  terminate.php
contrib/dhkeygen/: Makefile  dhkeygen.cxx  dhkeygen_2008.vcproj
contrib/dynamic-ip/: restart-on-ip-change.sh
contrib/logparser/: README  logparser.java
contrib/sqlbill/: ChangeLog  README
contrib/sqlbill/conf/freeradius/: INSTALL  clients.conf  dictionary  postgresql.conf  radiusd.conf
contrib/sqlbill/conf/gnugk/: gnugk.ini
contrib/sqlbill/sql/: INSTALL  README
contrib/sqlbill/sql/examples/: c_reports.sql  d_reports.sql  destinations.csv  f_merged.sql  f_pricing.sql  f_voiptariff.sql  f_voiptariffdst.sql  (+8 more)
contrib/statusport/: billing.pl  ssh_unregister_ip.pl  unregister_ip.pl
contrib/winsvc/: GnuGkService.txt  gksvctrl.chm  localhost.ht
contrib/wrapper/: gnugk_wrapper.pl  wrapper.txt
docs/: CDR.txt  Makefile  RasSrv.txt  addpasswd.1  changes.txt  destAnalysis.gd  endpointconfig.sgml  gk_faq.html  gnugk.1  identifiers.txt  installation.sgml  keepalive.txt  known_bugs.txt  manual-es.sgml  manual-fr.sgml  manual.sgml  performance.txt  prefix_analysis.gd  ptlib-2.10.1-pdns.patch  pwlib_bugs.txt  radauth.txt  readme.txt  reference.txt  routedmode.sgml  routing_decision.gd  screening.gd  signalling.txt  todo.txt  trace_levels.txt  tutorial.txt
docs/avaya/: avaya-support.txt
docs/avaya/asterisk/: extensions.ael  http.conf  ooh323.conf
docs/avaya/gnugk-config/: gatekeeper.ini
docs/manual/: .cvsignore  GnuGkManualTitle.doc  Makefile  acct.sgml  advanced.sgml  auth.sgml  endpointconfig.sgml  gnugkmapping  installation.sgml  introduction.sgml  mainconfig.sgml  manual.sgml  misc.sgml  monitoring.sgml  neighbors.sgml  ras.sgml  reference.sgml  routedmode.sgml  routing.sgml  tutorial.sgml
docs/manual/es/: acct.sgml  auth.sgml  endpointconfig.sgml  installation.sgml  introduction.sgml  mainconfig.sgml  manual-es.sgml  misc.sgml  monitoring.sgml  neighbors.sgml  ras.sgml  reference.sgml  routedmode.sgml  routing.sgml  tutorial.sgml
docs/manual/fr/: _unicode.txt  auth.sgml  endpointconfig.sgml  installation.sgml  introduction.sgml  mainconfig.sgml  manual-fr.sgml  misc.sgml  monitoring.sgml  neighbors.sgml  ras.sgml  reference.sgml  routedmode.sgml  routing.sgml  tutorial.sgml
docs/manual/zh_CN/: acct.sgml  advanced.sgml  auth.sgml  endpointconfig.sgml  installation.sgml  introduction.sgml  mainconfig.sgml  manual-zh_CN.sgml  misc.sgml  monitoring.sgml  neighbors.sgml  ras.sgml  reference.sgml  routedmode.sgml  routing.sgml  tutorial.sgml
docs/manual/zn_CN/: advanced.sgml  endpointconfig.sgml  gnugkmapping  installation.sgml  introduction.sgml  manual-zn_CN.sgml  ras.sgml  reference.sgml  routing.sgml  tutorial.sgml
docs/old/: GkStatusMsgFmt.html  compiling.txt  performance.txt  reference.txt  test-status.txt
etc/: H46023.ini  child.ini  clirw.ini  complete.ini  docs_todo  enum.ini  fileacct.ini  gk.spec.redhat  gnugk.ini  h350.ini  ipauth.ini  ldap_reg.pl  mysql.ini  nat.ini  neighbor.ini  odbc.ini  p2pnat.ini  proxy.ini  qos.ini  radacct.ini  radaliasauth.ini  radauth.ini  routed.ini  rrqauth.ini  sql.ini  status.ini  syslog.ini  unregister_ip.pl  uri.ini  voip.schema  vqueue.ini
initd/: README  gk.initd.centos53  gk.initd.centos65  gk.initd.debian6  gk.initd.freebsd53  gk.initd.novelloes103  gk.initd.redhat  gk.initd.suse  gk.initd.suse10  gk.initd.suse12  gk.initd.ubuntu14  gnugk.plist  systemd.gnugk.service
(+36 files in other folders)
